@@ -3531,7 +3531,7 @@ int __rt_call_not_available (struct task_struct *curr, struct pt_regs *regs) {
 
 static xnsysent_t __systab[] = {
     [__rtai_task_create ] = { &__rt_task_create, __xn_exec_init },
-    [__rtai_task_bind ] = { &__rt_task_bind, __xn_exec_primary },
+    [__rtai_task_bind ] = { &__rt_task_bind, __xn_exec_conforming },
     [__rtai_task_start ] = { &__rt_task_start, __xn_exec_any },
     [__rtai_task_suspend ] = { &__rt_task_suspend, __xn_exec_primary },
     [__rtai_task_resume ] = { &__rt_task_resume, __xn_exec_any },
@@ -3560,34 +3560,34 @@ static xnsysent_t __systab[] = {
     [__rtai_timer_inquire ] = { &__rt_timer_inquire, __xn_exec_any },
     [__rtai_timer_spin ] = { &__rt_timer_spin, __xn_exec_any },
     [__rtai_sem_create ] = { &__rt_sem_create, __xn_exec_any },
-    [__rtai_sem_bind ] = { &__rt_sem_bind, __xn_exec_primary },
+    [__rtai_sem_bind ] = { &__rt_sem_bind, __xn_exec_conforming },
     [__rtai_sem_delete ] = { &__rt_sem_delete, __xn_exec_any },
     [__rtai_sem_p ] = { &__rt_sem_p, __xn_exec_primary },
     [__rtai_sem_v ] = { &__rt_sem_v, __xn_exec_any },
     [__rtai_sem_broadcast ] = { &__rt_sem_broadcast, __xn_exec_any },
     [__rtai_sem_inquire ] = { &__rt_sem_inquire, __xn_exec_any },
     [__rtai_event_create ] = { &__rt_event_create, __xn_exec_any },
-    [__rtai_event_bind ] = { &__rt_event_bind, __xn_exec_primary },
+    [__rtai_event_bind ] = { &__rt_event_bind, __xn_exec_conforming },
     [__rtai_event_delete ] = { &__rt_event_delete, __xn_exec_any },
     [__rtai_event_wait ] = { &__rt_event_wait, __xn_exec_primary },
     [__rtai_event_signal ] = { &__rt_event_signal, __xn_exec_any },
     [__rtai_event_clear ] = { &__rt_event_clear, __xn_exec_any },
     [__rtai_event_inquire ] = { &__rt_event_inquire, __xn_exec_any },
     [__rtai_mutex_create ] = { &__rt_mutex_create, __xn_exec_any },
-    [__rtai_mutex_bind ] = { &__rt_mutex_bind, __xn_exec_primary },
+    [__rtai_mutex_bind ] = { &__rt_mutex_bind, __xn_exec_conforming },
     [__rtai_mutex_delete ] = { &__rt_mutex_delete, __xn_exec_any },
     [__rtai_mutex_lock ] = { &__rt_mutex_lock, __xn_exec_primary },
     [__rtai_mutex_unlock ] = { &__rt_mutex_unlock, __xn_exec_primary },
     [__rtai_mutex_inquire ] = { &__rt_mutex_inquire, __xn_exec_any },
     [__rtai_cond_create ] = { &__rt_cond_create, __xn_exec_any },
-    [__rtai_cond_bind ] = { &__rt_cond_bind, __xn_exec_primary },
+    [__rtai_cond_bind ] = { &__rt_cond_bind, __xn_exec_conforming },
     [__rtai_cond_delete ] = { &__rt_cond_delete, __xn_exec_any },
     [__rtai_cond_wait ] = { &__rt_cond_wait, __xn_exec_primary },
     [__rtai_cond_signal ] = { &__rt_cond_signal, __xn_exec_any },
     [__rtai_cond_broadcast ] = { &__rt_cond_broadcast, __xn_exec_any },
     [__rtai_cond_inquire ] = { &__rt_cond_inquire, __xn_exec_any },
     [__rtai_queue_create ] = { &__rt_queue_create, __xn_exec_lostage },
-    [__rtai_queue_bind ] = { &__rt_queue_bind, __xn_exec_primary },
+    [__rtai_queue_bind ] = { &__rt_queue_bind, __xn_exec_conforming },
     [__rtai_queue_delete ] = { &__rt_queue_delete, __xn_exec_any },
     [__rtai_queue_alloc ] = { &__rt_queue_alloc, __xn_exec_any },
     [__rtai_queue_free ] = { &__rt_queue_free, __xn_exec_any },
@@ -3595,7 +3595,7 @@ static xnsysent_t __systab[] = {
     [__rtai_queue_recv ] = { &__rt_queue_recv, __xn_exec_primary },
     [__rtai_queue_inquire ] = { &__rt_queue_inquire, __xn_exec_any },
     [__rtai_heap_create ] = { &__rt_heap_create, __xn_exec_lostage },
-    [__rtai_heap_bind ] = { &__rt_heap_bind, __xn_exec_primary },
+    [__rtai_heap_bind ] = { &__rt_heap_bind, __xn_exec_conforming },
     [__rtai_heap_delete ] = { &__rt_heap_delete, __xn_exec_any },
     [__rtai_heap_alloc ] = { &__rt_heap_alloc, __xn_exec_primary },
     [__rtai_heap_free ] = { &__rt_heap_free, __xn_exec_any },
@@ -3607,14 +3607,14 @@ static xnsysent_t __systab[] = {
     [__rtai_alarm_wait ] = { &__rt_alarm_wait, __xn_exec_primary },
     [__rtai_alarm_inquire ] = { &__rt_alarm_inquire, __xn_exec_any },
     [__rtai_intr_create ] = { &__rt_intr_create, __xn_exec_any },
-    [__rtai_intr_bind ] = { &__rt_intr_bind, __xn_exec_primary },
+    [__rtai_intr_bind ] = { &__rt_intr_bind, __xn_exec_conforming },
     [__rtai_intr_delete ] = { &__rt_intr_delete, __xn_exec_any },
     [__rtai_intr_wait ] = { &__rt_intr_wait, __xn_exec_primary },
     [__rtai_intr_enable ] = { &__rt_intr_enable, __xn_exec_any },
     [__rtai_intr_disable ] = { &__rt_intr_disable, __xn_exec_any },
     [__rtai_intr_inquire ] = { &__rt_intr_inquire, __xn_exec_any },
     [__rtai_pipe_create ] = { &__rt_pipe_create, __xn_exec_any },
-    [__rtai_pipe_bind ] = { &__rt_pipe_bind, __xn_exec_primary },
+    [__rtai_pipe_bind ] = { &__rt_pipe_bind, __xn_exec_conforming },
     [__rtai_pipe_delete ] = { &__rt_pipe_delete, __xn_exec_any },
     [__rtai_pipe_read ] = { &__rt_pipe_read, __xn_exec_primary },
     [__rtai_pipe_write ] = { &__rt_pipe_write, __xn_exec_any },
